# gimp-lqr-plugin

./: .gitignore  AUTHORS  BUGS  ChangeLog  GIT_NOTES  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autodeb  autogen.sh  checkinstall.sh  config.h.in  configure  configure.ac  configure.in  description-pak  intltool-update-all  makedist  resetdeb  updatedeb  zippo
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
batch/: Makefile.am  Makefile.in  batch-gimp-lqr.scm
debian.in/gutsy/debian.template/: changelog  control  copyright  docs
debian.in/hardy/debian.template/: control  rules
debian.template/: changelog
gap/: Makefile.am  Makefile.in  plug_in_lqr_iter.c
help/: Makefile.am  Makefile.in  html2wiki
help-online/: Makefile.am  Makefile.in
help-online/css/: Makefile.am  Makefile.in  gimp22.css
help-online/en/: Makefile.am  Makefile.in  index.html
help-online/it/: Makefile.am  Makefile.in  index.html
help/css/: Makefile.am  Makefile.in  gimp-help-draft.css  gimp-help-plain.css  gimp-help-screen.css  gimp22.css
help/en/: Makefile.am  Makefile.in  gimp-help.xml  index.html  index.wiki  index.wiki.bk
help/en/images/: Makefile.am  Makefile.in
help/es_ES/: Makefile.am  Makefile.in  index.html
help/images/: Makefile.am  Makefile.in
help/it/: Makefile.am  Makefile.in  index.html  index.wiki
help/it/images/: Makefile.am  Makefile.in
help/ru/: Makefile.am  Makefile.in  gimp-help.xml  index.html  index.wiki
help/ru/images/: Makefile.am  Makefile.in
lqr-pack4win/: winpack.sh
lqr.old/: lqr_base.h  lqr_colour.c  lqr_colour.h  lqr_cursor.c  lqr_gradient.c  lqr_progress.c  lqr_seams_buffer.h  lqr_seams_buffer_list.c  lqr_seams_buffer_list.h
m4/: ChangeLog
po/: ChangeLog  POTFILES.in  de.po  es_AR.po  es_ES.po  eu_ES.po  fr.po  gimp20-lqr-plugin.pot  hu.po  it.po  nb_NO.po  pt_BR.po  ro_RO.po  ru.po  sr.po  zh_CN.po  zh_TW.po
src/: .additional_syntax_hi.vim  .exrc  Makefile.am  Makefile.in  altcoordinates.c  altcoordinates.h  altsizeentry.c  altsizeentry.h  g_additional_syntax_hi.vim  interface.c  interface.h  interface_I.c  interface_I.h  interface_aux.c  interface_aux.h  io_functions.c  io_functions.h  layers_combo.c  layers_combo.h  lqr.h  lqr_carver.c  lqr_carver.h  lqr_carver_external.c  lqr_carver_external.h  lqr_colour.h  lqr_cursor.c  lqr_cursor.h  lqr_data.c  lqr_data.h  lqr_external.c  lqr_external.h  lqr_gradient.c  lqr_gradient.h  lqr_progress.c  lqr_progress.h  lqr_raster.c  lqr_raster.h  lqr_seams_buffer.c  lqr_seams_buffer.h  lqr_seams_buffer_list.c  (+9 more)
windows_installer_files/LqR_Installer/: NOTES  gimp-lqr-plugin-installer-PortableApps.nsi  gimp-lqr-plugin-installer.nsi
windows_installer_files/lqr-pack4win/: NOTES  subscript.vim  subscript_PortableApps.vim  winpack.sh
