## Process this file with automake to produce Makefile.in

SUBDIRS = po src help

EXTRA_DIST = m4/ChangeLog  \
	BUGS			\
	autogen.sh		\
        intltool-extract.in	\
        intltool-merge.in	\
        intltool-update.in      \
	intltool-update-all

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update

ACLOCAL_AMFLAGS = -I m4
