## Process this file with automake to produce Makefile.in

SUBDIRS = po src gap batch help-online

EXTRA_DIST = \
	BUGS			\
	autogen.sh		\
        intltool-extract.in	\
        intltool-merge.in	\
        intltool-update.in      \
	intltool-update-all

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update
