## Process this file with automake to produce Makefile.in

helpdatadir = $(PLUGIN_DATADIR)/help/images

helpdata_DATA = \
	wilber.png \
	dialog1.jpg \
	dialog2.jpg \
	dialog3.jpg \
	dialog4.jpg \
	dialog_interactive.jpg \
	dialog1_it.jpg \
	dialog2_it.jpg \
	dialog3_it.jpg \
	dialog4_it.jpg \
	dialog_interactive_it.jpg \
	dialog1_ru.jpg \
	dialog2_ru.jpg \
	dialog3_ru.jpg

EXTRA_DIST = $(helpdata_DATA)
